--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -408,6 +408,13 @@ called \textit{large}. The example of large category is
 \mynameref{def:setcategory} 
 \end{definition}
 
+\begin{definition}[Empty category]
+\label{def:empty_category}
+The category that does not contain any \mynameref{def:object}s and as
+result does not contain any \mynameref{def:morphism}s is called
+\textit{Empty category}
+\end{definition}
+
 \section{$\cat{Set}$ category example}
 
 There are several examples of categories that will also be used later
