--- a/functors.tex
+++ b/functors.tex
@@ -179,10 +179,10 @@ The \mynameref{def:functor_composition} is associative by definition.
 Therefore \mynameref{def:idfunctor} with the associative composition
 allow us to define a category where other categories are considered as
 objects and functors as morphisms: 
-\begin{definition}[\textbf{Cat} category]
-  \label{def:cat_category}
+\begin{definition}[$\cat{Cat}$ category]
+  \label{def:catcategory}
   The category of small categories (see \mynameref{def:small_category})
-  denoted as \textbf{Cat} is the \mynameref{def:category} where objects
+  denoted as $\cat{Cat}$ is the \mynameref{def:category} where objects
   are small categories and morphisms are \mynameref{def:functor}s
   between them.
 \end{definition}
