--- a/limits.tex
+++ b/limits.tex
@@ -275,5 +275,7 @@ limits. The empty category will give us the terminal object. The
 \mynameref{def:product} as the \mynameref{def:limit}.
 
 \begin{example}[Limit][Terminal object]
-
+Lets choose \mynameref{def:empty_category} as the
+\mynameref{def:index_category} $\cat{I}$. The \mynameref{def:limit}
+will be \mynameref{def:terminal_object} in the category $\cat{C}$.
 \end{example}
