--- a/notations.tex
+++ b/notations.tex
@@ -7,6 +7,7 @@
 \nomenclature{$\cat{Hask}$}{\mynameref{def:haskcategory}}
 \nomenclature{$\cat{Scala}$}{\mynameref{def:scalacategory}}
 \nomenclature{$\cat{C++}$}{\mynameref{def:cppcategory}}
+\nomenclature{$\cat{Cat}$}{\mynameref{def:catcategory}}
 \nomenclature{$a, b$}{\mynameref{def:object}s (Latin small letters)}
 \nomenclature{$f, g, h$}{\mynameref{def:morphism} (Latin small
   letter)}
