--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -412,7 +412,7 @@ called \textit{large}. The example of large category is
 \label{def:empty_category}
 The category that does not contain any \mynameref{def:object}s and as
 result does not contain any \mynameref{def:morphism}s is called
-\textit{Empty category}
+\textit{Empty category} \cite{bib:stackexchange:empty_category}.
 \end{definition}
 
 \section{$\cat{Set}$ category example}
