--- a/cattheory.bib
+++ b/cattheory.bib
@@ -1,4 +1,12 @@
 %% -*- coding:utf-8 -*-
+@misc{bib:stackexchange:empty_category,
+    title = {Does an(/the?) empty category exist?},
+    author = {user84563 (https://math.stackexchange.com/users/301130/user84563)},
+    howpublished = {Mathematics Stack Exchange},
+    note = {URL:https://math.stackexchange.com/q/1997015 (version: 2016-11-03)},
+    eprint = {https://math.stackexchange.com/q/1997015},
+    url = {https://math.stackexchange.com/q/1997015}
+}
 @misc{ wiki:cone,
     author = "{Wikipedia contributors}",
     title = "Cone (category theory) --- {Wikipedia}{,} The Free Encyclopedia",
