--- a/functors.tex
+++ b/functors.tex
@@ -215,7 +215,13 @@ We can construct an extension of Cartesian product as follows
   functor is called \textit{constant functor}.
 \end{definition}
 
-\begin{example}[Terminal object][\textbf{Cat}]
+\begin{example}[Initial object][$\cat{Cat}$]
+  \label{ex:initial_object_cat}
+  \mynameref{def:empty_category} is the \mynameref{def:initial_object}
+  in $\cat{Cat}$ category \cite{bib:stackexchange:empty_category}.
+\end{example}
+
+\begin{example}[Terminal object][$\cat{Cat}$]
   \label{ex:terminal_object_cat}
   \mynameref{def:const_functor} is the \mynameref{def:terminal_object}
   in $\cat{Cat}$ category.
