--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -415,6 +415,13 @@ result does not contain any \mynameref{def:morphism}s is called
 \textit{Empty category} \cite{bib:stackexchange:empty_category}.
 \end{definition}
 
+\begin{definition}[Trivial category]
+\label{def:trivial_category}
+The category that contains only one \mynameref{def:object} and only
+one \mynameref{def:morphism} (\mynameref{def:id})  is called
+\textit{Trivial category}.
+\end{definition}
+
 \section{$\cat{Set}$ category example}
 
 There are several examples of categories that will also be used later
