--- a/functors.tex
+++ b/functors.tex
@@ -223,8 +223,14 @@ We can construct an extension of Cartesian product as follows
 
 \begin{example}[Terminal object][$\cat{Cat}$]
   \label{ex:terminal_object_cat}
-  \mynameref{def:const_functor} is the \mynameref{def:terminal_object}
+  \mynameref{def:trivial_category} is the \mynameref{def:terminal_object}
   in $\cat{Cat}$ category.
+\end{example}
+
+\begin{example}[Terminal object][$\cat{Fun}$]
+  \label{ex:terminal_object_cat}
+  \mynameref{def:const_functor} is the \mynameref{def:terminal_object}
+  in $\cat{Fun}$ category.
 \end{example}
 
 The good example can be found in $\cat{Hask}$ category.
