--- a/monads.tex
+++ b/monads.tex
@@ -459,7 +459,7 @@ where $\mathcal{A}^\ast$ - \mynameref{def:dual_space}.
 
 \section{Category of endofunctors}
 
-The \mynameref{ex:fun_category} is an example of a category. We can
+The \mynameref{def:funcategory} is an example of a category. We can
 apply additional limitation and consider only
 \mynameref{def:endofunctor}s i.e. we will look at the category
 $[\cat{C}, \cat{C}]$ - the category of functors from category $\cat{C}$ to
