--- a/notations.tex
+++ b/notations.tex
@@ -33,7 +33,7 @@
  (Greek small letters)}
 \nomenclature{$\alpha: F \tont G$}{\mynameref{def:nt}
 (arrow with dot)}
-\nomenclature{$[\cat{C}, \cat{D}]$}{\mynameref{ex:fun_category}}
+\nomenclature{$[\cat{C}, \cat{D}]$}{\mynameref{def:funcategory}}
 \nomenclature{$\alpha \circ
   \beta$}{\mynameref{def:vertical_composition} of natural
   transformations (circle dot)}
