--- a/cattheory.bib
+++ b/cattheory.bib
@@ -1,4 +1,13 @@
 %% -*- coding:utf-8 -*-
+@misc {bib:stackexchange:initial_terminal_in_fun_category,
+    title = {Terminal and Initial objects in the category of functors},
+    author = {Enkidu (https://math.stackexchange.com/users/455216/enkidu)},
+    howpublished = {Mathematics Stack Exchange},
+    note = {URL:https://math.stackexchange.com/q/3033845 (version: 2018-12-10)},
+    eprint = {https://math.stackexchange.com/q/3033845},
+    url = {https://math.stackexchange.com/q/3033845}
+}
+
 @misc{bib:stackexchange:empty_category,
     title = {Does an(/the?) empty category exist?},
     author = {user84563 (https://math.stackexchange.com/users/301130/user84563)},
