--- a/nt.tex
+++ b/nt.tex
@@ -324,6 +324,11 @@ category} between categories $\cat{C}$ and $\cat{D}$ is denoted as
 $[\cat{C}, \cat{D}]$. 
 \end{definition}
 
+Uniqueness of \mynameref{def:nt} is the same to uniqueness of morphisms in the
+target category as soon as the natural transformation is a set of
+\mynameref{def:morphism}s in it. This fact leads to the following
+examples for initial and terminal objects in \mynameref{def:funcategory}.
+
 \begin{example}[Terminal object][$\cat{Fun}$]
   \label{ex:terminal_object_fun}
   Let $[\cat{C}, \cat{D}]$ is the functor category between $\cat{C}$
