--- a/limits.tex
+++ b/limits.tex
@@ -106,13 +106,14 @@ $\cat{I}$. The cone is denoted as $\catcone{c}{f}$.
 \end{definition}
 
 \begin{remark}[Coin as natural transformation]
-The \mynameref{def:cone} can be considered as \mynameref{def:nt}.
+The \mynameref{def:cone} can be considered as a \mynameref{def:nt}.
 There are 2 functors between categories $\cat{I}$ and 
 $\cat{C}$. The first one is the \mynameref{def:diagram_of_shape} $F:
 \cat{I} \tof \cat{C}$. The second one is the 
 \mynameref{def:const_functor}: 
-$\Delta_c: \cat{I} \tof \cat{C}$. The \mynameref{def:nt} $\Delta_c
-\tont F$ is the set of \mynameref{def:morphism}s from $\cat{C}$ with
+$\Delta_c: \cat{I} \tof \cat{C}$. By the definition of the
+\mynameref{def:nt} $\Delta_c
+\tont F$, it is the set of \mynameref{def:morphism}s from $\cat{C}$ with
 additional relations that are same as conditions defined for
 \mynameref{def:cone} $\catcone{c}{f}$.
 \end{remark}
