--- a/limits.tex
+++ b/limits.tex
@@ -111,11 +111,11 @@ There are 2 functors between categories $\cat{I}$ and
 $\cat{C}$. The first one is the \mynameref{def:diagram_of_shape} $F:
 \cat{I} \tof \cat{C}$. The second one is the 
 \mynameref{def:const_functor}: 
-$\Delta_c: \cat{I} \tof \cat{C}$. By the definition of the
+$\Delta_c: \cat{I} \tof \cat{C}$. The
 \mynameref{def:nt} $\Delta_c
-\tont F$, it is the set of \mynameref{def:morphism}s from $\cat{C}$ with
+\tont F$, by the definition, is the set of \mynameref{def:morphism}s from $\cat{C}$ with
 additional relations that are same as conditions defined for
-\mynameref{def:cone} $\catcone{c}{f}$.
+the \mynameref{def:cone} $\catcone{c}{f}$.
 \end{remark}
 
 \begin{definition}[Limit]
