--- a/limits.tex
+++ b/limits.tex
@@ -115,7 +115,8 @@ $\Delta_c: \cat{I} \tof \cat{C}$. The
 \mynameref{def:nt} $\Delta_c
 \tont F$, by the definition, is the set of \mynameref{def:morphism}s from $\cat{C}$ with
 additional relations that are same as conditions defined for
-the \mynameref{def:cone} $\catcone{c}{f}$.
+the \mynameref{def:cone} $\catcone{c}{f}$. Therefore we can consider
+the \mynameref{def:cone} as a \mynameref{def:nt}. 
 \end{remark}
 
 \begin{definition}[Limit]
