--- a/limits.tex
+++ b/limits.tex
@@ -279,12 +279,14 @@ The empty category will give us the terminal object. The
 \mynameref{def:product} as the \mynameref{def:limit}.
 
 \begin{example}[Limit][Terminal object]
+\index{Terminal object!Limit example}
 Lets choose \mynameref{def:empty_category} as the
 \mynameref{def:indexcategory} $\cat{I}$. The \mynameref{def:limit}
 will be \mynameref{def:terminal_object} in the category $\cat{C}$.
 \end{example}
 
 \begin{example}[Limit][Product]
+\index{Product!Limit example}
 Lets choose \mynameref{def:discrete_category} with 2 objects as the
 \mynameref{def:indexcategory} $\cat{I}$. The 
 \mynameref{def:diagram_of_shape} $F$ gives us the mapping into 2
