--- a/monads.tex
+++ b/monads.tex
@@ -37,6 +37,7 @@ The second one (identity presence) says that
 m \cdot e = e \cdot m = m.
 \end{equation}
 
+\subsection{Associativity}
 Lets consider \eqref{eq:monoid1} in details. 
 We can define $\mu$ as a
 \mynameref{def:morphism} in the following way 
@@ -165,6 +166,7 @@ The corresponding commutative diagram is shown in
   \label{fig:monoid_mu}
 \end{figure}
 
+\subsection{Identity presence}
 For \eqref{eq:monoid2} consider a morphism $\eta$ from
 \mynameref{def:singleton_set} 
 \footnote{
@@ -236,6 +238,7 @@ The \eqref{eq:monoid2} leads to the following equation for morphisms
 \]
 or the commutative diagram show on \cref{fig:monoid_eta_lambda_rho}.
 
+\subsection{Monoid definition}
 Before given a formal definition lets look at the operations were used
 for the construction. The first one is the product of 2 objects:
 \[
