--- a/monads.tex
+++ b/monads.tex
@@ -178,28 +178,28 @@ $e = \eta(0)$. Consider 2 sets $B = I \times M$ and $B' = M \times I$.
 We have 2 \mynameref{def:isomorphism}s: $B \cong_\lambda M$ and $B'
 \cong_\rho M$ such that
 \[
-\lambda(m) = 0 \times m
+\lambda(m) = (0, m) \in B = I \times M
 \] 
 and
 \[
-\rho(m) = m \times 0.
+\rho(m) = (m, 0) \in B' = M \times I.
 \] 
 
 If we apply the products (see \mynameref{def:product_of_morphisms}) $\eta \times \idm{M}$ and
 $\idm{M} \times \eta$ on $B$ and $B'$ respectively then we get
 \begin{eqnarray}
-\left[\eta \times \idm{M} \right]\left(0 \times m\right) = e \times m,
+\left[\eta \times \idm{M} \right]\left(0, m\right) = (e, m),
 \nonumber \\
-\left[\idm{M} \times \eta \right]\left(m \times 0\right) = m \times e.
+\left[\idm{M} \times \eta \right]\left(m, 0\right) = (m, e).
 \nonumber
 \end{eqnarray}
 After the application of $\mu$ on the result we obtain
 \begin{eqnarray}
-\mu \left(\left[\eta \times \idm{M}\right] \left(0 \times m\right) \right) 
-= \mu \left( e \times m \right) = e \cdot m,
+\mu \left(\left[\eta \times \idm{M}\right] \left(0, m\right) \right) 
+= \mu \left( e, m \right) = e \cdot m,
 \nonumber \\
-\mu \left(\left[ \idm{M} \times \eta \right]\left(m \times 0\right) \right) = 
-\mu \left(m \times e \right) = m \cdot e.
+\mu \left(\left[ \idm{M} \times \eta \right]\left(m, 0\right) \right) = 
+\mu \left(m, e \right) = m \cdot e.
 \nonumber
 \end{eqnarray}
 \begin{figure}
