Monad as monoid and triad

--- a/monads.tex
+++ b/monads.tex
@@ -516,6 +516,14 @@ functor composition.
   The monad will be denoted later as $\left<M, \mu, \eta\right>$.
 \end{definition}
 
+\begin{remark}[Monad term]
+The word monad is a concatenation of 2 words: \textbf{mon}oid and
+tri\textbf{ad} \cite[p.~138]{bib:maclane98}. The first one points to the fact
+that the object looks 
+like a monoid. The second one says that it is a set of 3 objects
+(\mynameref{def:endofunctor} and 2 \mynameref{def:nt}s) aka triad. 
+\end{remark}
+
 Lets look at the requirements \eqref{eq:monad} more closely. Notice
 that the functor composition is associative:
 \[
