--- a/monads.tex
+++ b/monads.tex
@@ -170,7 +170,7 @@ The corresponding commutative diagram is shown in
 For \eqref{eq:monoid2} consider a morphism $\eta$ from
 \mynameref{def:singleton_set} 
 \footnote{
- It also is called \cite{bib:maclane98} as a one point set
+ It also is called \cite[p.~2]{bib:maclane98} as a one point set
 }
 $I = \{0\}$ to the special element $e \in M$ such that
 $\forall m \in M: e \cdot m = m \cdot e = m$. I.e. $\eta: I \to M$ and
@@ -474,7 +474,7 @@ $[\cat{C}, \cat{C}]$ - the category of functors from category $\cat{C}$ to
 the same category. One of the most popular math definition of a monad
 is the following: 
 ``All told, a monad in X is just a monoid in the category of
-endofunctors of X''\cite{bib:maclane98}.
+endofunctors of X''\cite[p.~138]{bib:maclane98}.
 Later we will give an explanation for that one.
 
 We start with the formal definition of category of endofunctors and a
