several minor fixes

--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -326,7 +326,9 @@ can be treated as the same object.
 \begin{definition}[Set of morphisms]
 \label{def:morphism_set}
   The set of morphisms between objects $a$ and $b$ in the $\cat{C}$
-  will be denoted as $\hom_{\cat{C}}(a, b)$
+  will be denoted as $\hom_{\cat{C}}(a, b)$. The set will be denoted
+  as $\hom(a, b)$ if the category is not
+  important 
 \end{definition}
 
 The \mynameref{def:category} can be considered as a way to represent a
