--- a/notations.tex
+++ b/notations.tex
@@ -45,8 +45,9 @@
   between $a$ and $b$} 
 \nomenclature{$\left<M, \mu, \eta\right>$}{\mynameref{def:monad}}
 \nomenclature{$\cat{C_M}$}{\mynameref{def:kleisli_category}}
-\nomenclature{$\hom(a, b)$}{set of \mynameref{def:morphism}s between $a$ and $b$}
-\nomenclature{$\hom_{\cat{C}}(a, b)$}{\mynameref{def:morphism_set}}
+\nomenclature{$\hom(a, b)$}{\mynameref{def:morphism_set} between $a$ and $b$}
+\nomenclature{$\hom_{\cat{C}}(a, b)$}{\mynameref{def:morphism_set}
+  between $a$ and $b$ in category $\cat{C}$}
 \nomenclature{$\mathcal{H}_n$}{finite dimensional
   \mynameref{def:hilbert_space}}
 \nomenclature{$a^b$}{\mynameref{def:exponential}}
