bifunctor in nts

--- a/nt.tex
+++ b/nt.tex
@@ -372,7 +372,7 @@ that is called \textit{horizontal composition}. Note that we use a
 special symbol $\star$ for the composition.
 \end{definition}
 
-\begin{remark}[Bifunctor in category of functors]
+\begin{remark}[Bifunctor in the category of functors]
  \label{rem:bifunctor_fun_cat}
 If we have the same pair of functors as in
 \cref{def:horizontal_composition} then we can consider the functors as
@@ -400,7 +400,8 @@ If we have the same pair of functors as in
   \otimes: \alpha \times \beta \to \alpha \star \beta \in \cathom{\mathcal{C}}.
   \]
   
-  As result we have introduced mapping $\otimes$ as a bifunctor.
+  As result we just introduced mapping $\otimes$ as a
+  \mynameref{def:bifunctor} in the category of functors.
 \end{remark}
 
 \begin{definition}[Left whiskering]
