--- a/cattheory.bib
+++ b/cattheory.bib
@@ -1,4 +1,11 @@
 %% -*- coding:utf-8 -*-
+@misc{bib:scalable_program_arch,    
+    title = {Scalable program architectures},
+    author = {Gabriel Gonzalez},
+    year="2014",
+    url = {http://www.haskellforall.com/2014/04/scalable-program-architectures.html}
+}
+
 @misc {bib:stackexchange:initial_terminal_in_fun_category,
     title = {Terminal and Initial objects in the category of functors},
     author = {Enkidu (https://math.stackexchange.com/users/455216/enkidu)},
@@ -34,6 +41,17 @@
 	edition      =	{Winter 2016},
 	publisher    =	{Metaphysics Research Lab, Stanford University}
 }
+
+@misc{github:galois_ivanmurashko,
+  author = {Ivan Murashko},
+  title = {Lectures notes in Introduction to Galois Theory by
+  Ekaterina Amerik},
+  year = {2016-2019},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  url = {https://github.com/ivanmurashko/courseragalois}
+}
+
 
 @misc{github:cattheory_ivanmurashko,
   author = {Ivan Murashko},
