--- a/monads.tex
+++ b/monads.tex
@@ -324,6 +324,15 @@ m \cong_\rho m \times t
 \end{enumerate}
 \end{definition}
 
+\subsection{Monoid importance}
+Why is the concept of \mynameref{def:monoid_category} so important? 
+In pure math it provides build blocks for important concepts such as
+Group, Ring, Field \cite{github:galois_ivanmurashko}. In programming
+languages it gives more simple and robust concept for software
+design \cite{bib:scalable_program_arch}. 
+
+TBD  
+
 \section{Monoidal category}
 As we saw in the categorical definition for monoid (see
 \cref{def:monoid_category}) the category $\cat{C}$ should satisfy
