--- a/monads.tex
+++ b/monads.tex
@@ -329,7 +329,12 @@ Why is the concept of \mynameref{def:monoid_category} so important?
 In pure math it provides build blocks for important concepts such as
 Group, Ring, Field \cite{github:galois_ivanmurashko}. In programming
 languages it gives more simple and robust concept for software
-design \cite{bib:scalable_program_arch}. 
+design \cite{bib:scalable_program_arch}.
+
+We can notice that monoid definition (see \cref{def:monoid}) has the
+same requirements as morphisms in category theory. Moreover the monoid
+can be viewed as a \mynameref{def:category} (see
+\cref{sec:category_as_monoid}).  
 
 TBD  
 
