--- a/objectsmorphisms.tex
+++ b/objectsmorphisms.tex
@@ -368,6 +368,7 @@ makes the diagram commute (see \cref{fig:product_of_morphisms}).
 \end{definition} 
 
 \section{Category as a monoid}
+\label{sec:category_as_monoid}
 Consider the following definition from abstract algebra
 \begin{definition}[Monoid]
   \label{def:monoid}
