--- a/monads.tex
+++ b/monads.tex
@@ -325,8 +325,11 @@ m \cong_\rho m \times t
 \end{definition}
 
 \subsection{Monoid importance}
+\index{Group}
+\index{Ring}
+\index{Field}
 Why is the concept of \mynameref{def:monoid_category} so important? 
-In pure math it provides build blocks for important concepts such as
+In pure math it provides the build blocks for important concepts such as
 Group, Ring, Field \cite{github:galois_ivanmurashko}. In programming
 languages it gives more simple and robust concept for software
 design \cite{bib:scalable_program_arch}.
@@ -355,7 +358,7 @@ very complex structure of types if objects of type $B$ will be
 combined into new type $C$ etc.
 
 You will not get the problems in the second case because you will be
-always in a closed collection of objects with type $A$.
+always in a closed collection of objects with the same type $A$.
 
 \section{Monoidal category}
 As we saw in the categorical definition for monoid (see
