co-cone definition

--- a/cattheory.tex
+++ b/cattheory.tex
@@ -309,6 +309,10 @@
   \mathrm{cone}(#1, #2^{(#1)})%
 }
 
+\newcommand {\catcocone} [2] {%
+  \mathrm{cocone}(#1, #2^{(#1)})%
+}
+
 
 \DeclareMathOperator{\dom}{dom}
 \DeclareMathOperator{\cod}{cod}
