--- a/limits.tex
+++ b/limits.tex
@@ -102,7 +102,7 @@ A \textit{cone} to $F$ is an object $d \in \catob{C}$ with
 \mynameref{def:morphism}s $f^{c} = \left\{f_i^{c}: c \to
 a_i^{(C)}\right\}$, where $a_i^{(C)} = F(a_i^{(I)})$ 
 indexed by objects from 
-$\cat{I}$. The cone is denoted as $\catcone{c}{f}$.
+$\cat{I}$ (see \cref{fig:cone}). The cone is denoted as $\catcone{c}{f}$.
 \end{definition}
 
 \begin{remark}[Coin as natural transformation]
@@ -258,7 +258,52 @@ TBD
 
 \begin{definition}[Co-cone]
 \label{def:cocone}
-TBD
+\begin{figure}[H]
+  \centering
+  \begin{tikzpicture}[ele/.style={fill=black,circle,minimum
+          width=.8pt,inner sep=1pt},every fit/.style={ellipse,draw,inner
+          sep=-2pt}]
+
+      % the texts
+
+      \node at (0,0) {$I$};        
+      \node at (0,3) {$C$};        
+
+      \node[ele,label=left:$a_i^{(I)}$] (ac) at (1.5,0) {};    
+      \node[ele,label=right:$a_j^{(I)}$] (bc) at (3.5,0) {};    
+      \node[ele,label=left:$a_i^{(C)}$] (ad) at (1.5,3) {};
+      \node[ele,label=right:$a_j^{(C)}$] (bd) at (3.5,3) {};
+      \node[ele,label=above:$c$] (d) at (2.5,5) {};
+
+      \node[draw,fit= (ac) (bc),minimum width=4cm, minimum
+        height=2cm] {} ;
+      \node[draw,fit= (ad) (bd) (d),minimum width=5cm, minimum
+        height=4cm] {} ;
+
+      \draw[->,thick,shorten <=2pt,shorten >=2pt] (ad) to
+      node[left]{$f^{(c)}_i$} (d);
+      \draw[->,thick,shorten <=2pt,shorten >=2pt] (bd) to
+      node[right]{$f^{(c)}_j$} (d);
+
+      \draw[->,thick,shorten <=2pt,shorten >=2pt] (ac) to
+      node[below]{$g_{ij}^{(I)}$} (bc);
+      \draw[->,thick,shorten <=2pt,shorten >=2pt] (ad) to
+      node[above]{$g_{ij}^{(C)}$} (bd);
+      \draw[->,thick,shorten <=2pt,shorten >=2pt] (ac) to
+      node[left]{$a_i^{(C)} = F(a_i^{(I)})$} (ad);
+      \draw[->,thick,shorten <=2pt,shorten >=2pt] (bc) to
+      node[right]{$a_j^{(C)} = F(a_j^{(I)})$} (bd);
+  \end{tikzpicture}
+  \caption{Co-cone $\catcocone{c}{f}$} 
+  \label{fig:cocone}
+\end{figure}
+Let $F$ is a \mynameref{def:diagram_of_shape} $\cat{I}$ in $\cat{C}$.
+A \textit{co-cone} to $F$ is an object $d \in \catob{C}$ with
+\mynameref{def:morphism}s $f^{c} = \left\{f_i^{c}:
+a_i^{(C)} \to c \right\}$, where $a_i^{(C)} = F(a_i^{(I)})$ 
+indexed by objects from 
+$\cat{I}$ (see \cref{fig:cocone}). The co-cone is denoted as
+$\catcocone{c}{f}$. 
 \end{definition}
 
 \begin{definition}[Colimit]
