--- a/notations.tex
+++ b/notations.tex
@@ -53,6 +53,7 @@
 \nomenclature{$a^b$}{\mynameref{def:exponential}}
 \nomenclature{$P \implies Q$}{\mynameref{def:implication}}
 \nomenclature{$\catcone{c}{f}$}{\mynameref{def:cone}}
+\nomenclature{$\catcocone{c}{f}$}{\mynameref{def:cocone}}
 \nomenclature{$\Delta \downarrow
   F$}{\mynameref{def:category_of_cones}}
 \nomenclature{TBD}{To Be Defined (later)}
